@@ -19,9 +19,9 @@ package org.apache.shardingsphere.spi;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
+import org.apache.shardingsphere.spi.annotation.SingletonSPI;
 import org.apache.shardingsphere.spi.exception.ServiceLoaderInstantiationException;
 
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -57,34 +57,33 @@ public final class ShardingSphereServiceLoader {
     }
     
     /**
-     * Get singleton service instances.
-     *
-     * @param service service class
+     * Get service instances.
+     * 
+     * @param serviceInterface service interface
      * @param <T> type of service
      * @return service instances
      */
-    @SuppressWarnings("unchecked")
-    public static <T> Collection<T> getSingletonServiceInstances(final Class<T> service) {
-        return (Collection<T>) SERVICES.getOrDefault(service, Collections.emptyList());
+    public static <T> Collection<T> getServiceInstances(final Class<T> serviceInterface) {
+        return null == serviceInterface.getAnnotation(SingletonSPI.class) ? newServiceInstances(serviceInterface) : getSingletonServiceInstances(serviceInterface);
     }
     
     /**
      * New service instances.
      *
-     * @param service service class
+     * @param serviceInterface service interface
      * @param <T> type of service
      * @return service instances
      */
     @SuppressWarnings("unchecked")
-    public static <T> Collection<T> newServiceInstances(final Class<T> service) {
-        if (!SERVICES.containsKey(service)) {
+    public static <T> Collection<T> newServiceInstances(final Class<T> serviceInterface) {
+        if (!SERVICES.containsKey(serviceInterface)) {
             return Collections.emptyList();
         }
-        Collection<Object> services = SERVICES.get(service);
+        Collection<Object> services = SERVICES.get(serviceInterface);
         if (services.isEmpty()) {
             return Collections.emptyList();
         }
-        Collection<T> result = new ArrayList<>(services.size());
+        Collection<T> result = new LinkedList<>();
         for (Object each : services) {
             result.add((T) newServiceInstance(each.getClass()));
         }
@@ -93,9 +92,21 @@ public final class ShardingSphereServiceLoader {
     
     private static Object newServiceInstance(final Class<?> clazz) {
         try {
-            return clazz.newInstance();
-        } catch (final InstantiationException | IllegalAccessException ex) {
+            return clazz.getDeclaredConstructor().newInstance();
+        } catch (final ReflectiveOperationException ex) {
             throw new ServiceLoaderInstantiationException(clazz, ex);
         }
+    }
+    
+    /**
+     * Get singleton service instances.
+     *
+     * @param serviceInterface service interface
+     * @param <T> type of service
+     * @return service instances
+     */
+    @SuppressWarnings("unchecked")
+    public static <T> Collection<T> getSingletonServiceInstances(final Class<T> serviceInterface) {
+        return (Collection<T>) SERVICES.getOrDefault(serviceInterface, Collections.emptyList());
     }
 }
